amf-cli/shared/src/test/resources/parser-results/raml/error/null-name.raml
#%RAML 1.0
title: test
version: v1-int
baseUri: http://example.com/uri/services
documentation:
- title: Proxy API
  content: HTTP API's
types:
  Envelope:
    displayName: Envelope
    type: object
    properties:
      null:
        required: false
        displayName: null
        type: boolean
      minY:
        required: false
        displayName: minY
        type: number
        format: double
      minX:
        required: false
        displayName: minX
        type: number
        format: double
      maxY:
        required: false
        displayName: maxY
        type: number
        format: double
      maxX:
        required: false
        displayName: maxX
        type: number
        format: double
      area:
        required: false
        displayName: area
        type: number
        format: double
